--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -36,6 +36,7 @@ section.content {
 .content {
   display: flex;
   flex-direction: column;
+  min-height: 500px;
 }
 
 .lg-social {
